kubernetes/clusters/delta/apps/system-monitoring/loki/ingress-route.yaml
#Workaround for external-dns https://github.com/kubernetes-sigs/external-dns/issues/1257#issuecomment-628638415
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: system-monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: loki.${EXTERNAL_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${EXTERNAL_DOMAIN}
spec:
  rules:
    - host: loki.${EXTERNAL_DOMAIN}  
---
apiVersion: nginx.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: system-monitoring
spec:
  routes:
  - kind: Rule
    match: Host(`loki.${EXTERNAL_DOMAIN}`)
    middlewares:
    - name: loki-basic-auth
    services:
    - name: loki
      port: 3100
